--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "author": "7h0mas-R",
   "license": "ISC",
+  "dependencies": {
+    "set-interval-async":"^2.0.3",
+    "font": "git+https://github.com/7h0mas-R/Font.git"
+  },
   "bugs": {
     "url": "https://github.com/7h0mas-R/LCD/issues"
   },
