--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "author": "7h0mas-R",
   "license": "ISC",
   "dependencies": {
-    "set-interval-async":"^2.0.3",
+    "set-interval-async": "^2.0.3",
     "font": "git+https://github.com/7h0mas-R/Font.git",
-    "onoff":"^6.0.3"
+    "onoff": "^6.0.3",
+    "spi-device": "^3.1.2"
   },
   "bugs": {
     "url": "https://github.com/7h0mas-R/LCD/issues"
