--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,363 @@
 .DS_Store
+node_modules/@babel/runtime/LICENSE
+node_modules/@babel/runtime/package.json
+node_modules/@babel/runtime/README.md
+node_modules/@babel/runtime/helpers/applyDecoratedDescriptor.js
+node_modules/@babel/runtime/helpers/arrayWithHoles.js
+node_modules/@babel/runtime/helpers/arrayWithoutHoles.js
+node_modules/@babel/runtime/helpers/assertThisInitialized.js
+node_modules/@babel/runtime/helpers/AsyncGenerator.js
+node_modules/@babel/runtime/helpers/asyncGeneratorDelegate.js
+node_modules/@babel/runtime/helpers/asyncIterator.js
+node_modules/@babel/runtime/helpers/asyncToGenerator.js
+node_modules/@babel/runtime/helpers/awaitAsyncGenerator.js
+node_modules/@babel/runtime/helpers/AwaitValue.js
+node_modules/@babel/runtime/helpers/classCallCheck.js
+node_modules/@babel/runtime/helpers/classNameTDZError.js
+node_modules/@babel/runtime/helpers/classPrivateFieldGet.js
+node_modules/@babel/runtime/helpers/classPrivateFieldLooseBase.js
+node_modules/@babel/runtime/helpers/classPrivateFieldLooseKey.js
+node_modules/@babel/runtime/helpers/classPrivateFieldSet.js
+node_modules/@babel/runtime/helpers/classPrivateMethodGet.js
+node_modules/@babel/runtime/helpers/classPrivateMethodSet.js
+node_modules/@babel/runtime/helpers/classStaticPrivateFieldSpecGet.js
+node_modules/@babel/runtime/helpers/classStaticPrivateFieldSpecSet.js
+node_modules/@babel/runtime/helpers/classStaticPrivateMethodGet.js
+node_modules/@babel/runtime/helpers/classStaticPrivateMethodSet.js
+node_modules/@babel/runtime/helpers/construct.js
+node_modules/@babel/runtime/helpers/createClass.js
+node_modules/@babel/runtime/helpers/decorate.js
+node_modules/@babel/runtime/helpers/defaults.js
+node_modules/@babel/runtime/helpers/defineEnumerableProperties.js
+node_modules/@babel/runtime/helpers/defineProperty.js
+node_modules/@babel/runtime/helpers/extends.js
+node_modules/@babel/runtime/helpers/get.js
+node_modules/@babel/runtime/helpers/getPrototypeOf.js
+node_modules/@babel/runtime/helpers/inherits.js
+node_modules/@babel/runtime/helpers/inheritsLoose.js
+node_modules/@babel/runtime/helpers/initializerDefineProperty.js
+node_modules/@babel/runtime/helpers/initializerWarningHelper.js
+node_modules/@babel/runtime/helpers/instanceof.js
+node_modules/@babel/runtime/helpers/interopRequireDefault.js
+node_modules/@babel/runtime/helpers/interopRequireWildcard.js
+node_modules/@babel/runtime/helpers/isNativeFunction.js
+node_modules/@babel/runtime/helpers/iterableToArray.js
+node_modules/@babel/runtime/helpers/iterableToArrayLimit.js
+node_modules/@babel/runtime/helpers/iterableToArrayLimitLoose.js
+node_modules/@babel/runtime/helpers/jsx.js
+node_modules/@babel/runtime/helpers/newArrowCheck.js
+node_modules/@babel/runtime/helpers/nonIterableRest.js
+node_modules/@babel/runtime/helpers/nonIterableSpread.js
+node_modules/@babel/runtime/helpers/objectDestructuringEmpty.js
+node_modules/@babel/runtime/helpers/objectSpread.js
+node_modules/@babel/runtime/helpers/objectSpread2.js
+node_modules/@babel/runtime/helpers/objectWithoutProperties.js
+node_modules/@babel/runtime/helpers/objectWithoutPropertiesLoose.js
+node_modules/@babel/runtime/helpers/possibleConstructorReturn.js
+node_modules/@babel/runtime/helpers/readOnlyError.js
+node_modules/@babel/runtime/helpers/set.js
+node_modules/@babel/runtime/helpers/setPrototypeOf.js
+node_modules/@babel/runtime/helpers/skipFirstGeneratorNext.js
+node_modules/@babel/runtime/helpers/slicedToArray.js
+node_modules/@babel/runtime/helpers/slicedToArrayLoose.js
+node_modules/@babel/runtime/helpers/superPropBase.js
+node_modules/@babel/runtime/helpers/taggedTemplateLiteral.js
+node_modules/@babel/runtime/helpers/taggedTemplateLiteralLoose.js
+node_modules/@babel/runtime/helpers/temporalRef.js
+node_modules/@babel/runtime/helpers/temporalUndefined.js
+node_modules/@babel/runtime/helpers/toArray.js
+node_modules/@babel/runtime/helpers/toConsumableArray.js
+node_modules/@babel/runtime/helpers/toPrimitive.js
+node_modules/@babel/runtime/helpers/toPropertyKey.js
+node_modules/@babel/runtime/helpers/typeof.js
+node_modules/@babel/runtime/helpers/wrapAsyncGenerator.js
+node_modules/@babel/runtime/helpers/wrapNativeSuper.js
+node_modules/@babel/runtime/helpers/wrapRegExp.js
+node_modules/@babel/runtime/helpers/esm/applyDecoratedDescriptor.js
+node_modules/@babel/runtime/helpers/esm/arrayWithHoles.js
+node_modules/@babel/runtime/helpers/esm/arrayWithoutHoles.js
+node_modules/@babel/runtime/helpers/esm/assertThisInitialized.js
+node_modules/@babel/runtime/helpers/esm/AsyncGenerator.js
+node_modules/@babel/runtime/helpers/esm/asyncGeneratorDelegate.js
+node_modules/@babel/runtime/helpers/esm/asyncIterator.js
+node_modules/@babel/runtime/helpers/esm/asyncToGenerator.js
+node_modules/@babel/runtime/helpers/esm/awaitAsyncGenerator.js
+node_modules/@babel/runtime/helpers/esm/AwaitValue.js
+node_modules/@babel/runtime/helpers/esm/classCallCheck.js
+node_modules/@babel/runtime/helpers/esm/classNameTDZError.js
+node_modules/@babel/runtime/helpers/esm/classPrivateFieldGet.js
+node_modules/@babel/runtime/helpers/esm/classPrivateFieldLooseBase.js
+node_modules/@babel/runtime/helpers/esm/classPrivateFieldLooseKey.js
+node_modules/@babel/runtime/helpers/esm/classPrivateFieldSet.js
+node_modules/@babel/runtime/helpers/esm/classPrivateMethodGet.js
+node_modules/@babel/runtime/helpers/esm/classPrivateMethodSet.js
+node_modules/@babel/runtime/helpers/esm/classStaticPrivateFieldSpecGet.js
+node_modules/@babel/runtime/helpers/esm/classStaticPrivateFieldSpecSet.js
+node_modules/@babel/runtime/helpers/esm/classStaticPrivateMethodGet.js
+node_modules/@babel/runtime/helpers/esm/classStaticPrivateMethodSet.js
+node_modules/@babel/runtime/helpers/esm/construct.js
+node_modules/@babel/runtime/helpers/esm/createClass.js
+node_modules/@babel/runtime/helpers/esm/decorate.js
+node_modules/@babel/runtime/helpers/esm/defaults.js
+node_modules/@babel/runtime/helpers/esm/defineEnumerableProperties.js
+node_modules/@babel/runtime/helpers/esm/defineProperty.js
+node_modules/@babel/runtime/helpers/esm/extends.js
+node_modules/@babel/runtime/helpers/esm/get.js
+node_modules/@babel/runtime/helpers/esm/getPrototypeOf.js
+node_modules/@babel/runtime/helpers/esm/inherits.js
+node_modules/@babel/runtime/helpers/esm/inheritsLoose.js
+node_modules/@babel/runtime/helpers/esm/initializerDefineProperty.js
+node_modules/@babel/runtime/helpers/esm/initializerWarningHelper.js
+node_modules/@babel/runtime/helpers/esm/instanceof.js
+node_modules/@babel/runtime/helpers/esm/interopRequireDefault.js
+node_modules/@babel/runtime/helpers/esm/interopRequireWildcard.js
+node_modules/@babel/runtime/helpers/esm/isNativeFunction.js
+node_modules/@babel/runtime/helpers/esm/iterableToArray.js
+node_modules/@babel/runtime/helpers/esm/iterableToArrayLimit.js
+node_modules/@babel/runtime/helpers/esm/iterableToArrayLimitLoose.js
+node_modules/@babel/runtime/helpers/esm/jsx.js
+node_modules/@babel/runtime/helpers/esm/newArrowCheck.js
+node_modules/@babel/runtime/helpers/esm/nonIterableRest.js
+node_modules/@babel/runtime/helpers/esm/nonIterableSpread.js
+node_modules/@babel/runtime/helpers/esm/objectDestructuringEmpty.js
+node_modules/@babel/runtime/helpers/esm/objectSpread.js
+node_modules/@babel/runtime/helpers/esm/objectSpread2.js
+node_modules/@babel/runtime/helpers/esm/objectWithoutProperties.js
+node_modules/@babel/runtime/helpers/esm/objectWithoutPropertiesLoose.js
+node_modules/@babel/runtime/helpers/esm/possibleConstructorReturn.js
+node_modules/@babel/runtime/helpers/esm/readOnlyError.js
+node_modules/@babel/runtime/helpers/esm/set.js
+node_modules/@babel/runtime/helpers/esm/setPrototypeOf.js
+node_modules/@babel/runtime/helpers/esm/skipFirstGeneratorNext.js
+node_modules/@babel/runtime/helpers/esm/slicedToArray.js
+node_modules/@babel/runtime/helpers/esm/slicedToArrayLoose.js
+node_modules/@babel/runtime/helpers/esm/superPropBase.js
+node_modules/@babel/runtime/helpers/esm/taggedTemplateLiteral.js
+node_modules/@babel/runtime/helpers/esm/taggedTemplateLiteralLoose.js
+node_modules/@babel/runtime/helpers/esm/temporalRef.js
+node_modules/@babel/runtime/helpers/esm/temporalUndefined.js
+node_modules/@babel/runtime/helpers/esm/toArray.js
+node_modules/@babel/runtime/helpers/esm/toConsumableArray.js
+node_modules/@babel/runtime/helpers/esm/toPrimitive.js
+node_modules/@babel/runtime/helpers/esm/toPropertyKey.js
+node_modules/@babel/runtime/helpers/esm/typeof.js
+node_modules/@babel/runtime/helpers/esm/wrapAsyncGenerator.js
+node_modules/@babel/runtime/helpers/esm/wrapNativeSuper.js
+node_modules/@babel/runtime/helpers/esm/wrapRegExp.js
+node_modules/@babel/runtime/regenerator/index.js
+node_modules/bindings/bindings.js
+node_modules/bindings/LICENSE.md
+node_modules/bindings/package.json
+node_modules/bindings/README.md
+node_modules/epoll/binding.gyp
+node_modules/epoll/epoll.js
+node_modules/epoll/History.md
+node_modules/epoll/LICENSE
+node_modules/epoll/package.json
+node_modules/epoll/README.md
+node_modules/epoll/build/binding.Makefile
+node_modules/epoll/build/config.gypi
+node_modules/epoll/build/epoll.target.mk
+node_modules/epoll/build/gyp-mac-tool
+node_modules/epoll/build/Makefile
+node_modules/epoll/build/Release/epoll.node
+node_modules/epoll/build/Release/.deps/Release/epoll.node.d
+node_modules/epoll/example/interrupts-per-second/export
+node_modules/epoll/example/interrupts-per-second/interrupts-per-second.js
+node_modules/epoll/example/interrupts-per-second/unexport
+node_modules/epoll/example/watch-button/export
+node_modules/epoll/example/watch-button/unexport
+node_modules/epoll/example/watch-button/watch-button.js
+node_modules/epoll/src/epoll.cc
+node_modules/epoll/src/epoll.h
+node_modules/epoll/test/closed.js
+node_modules/epoll/test/do-almost-nothing.js
+node_modules/epoll/test/do-nothing.js
+node_modules/epoll/test/no-gc-allowed.js
+node_modules/epoll/test/one-shot.js
+node_modules/epoll/test/performance-check.js
+node_modules/epoll/test/run-tests
+node_modules/epoll/test/two-shot.js
+node_modules/epoll/test/util.js
+node_modules/epoll/test/verify-events.js
+node_modules/epoll/test/coin-acceptor/avr-build
+node_modules/epoll/test/coin-acceptor/coin-acceptor.c
+node_modules/epoll/test/coin-acceptor/coin-counter-fail.js
+node_modules/epoll/test/coin-acceptor/coin-counter-success.js
+node_modules/epoll/test/coin-acceptor/output
+node_modules/epoll/test/stress/brute-force-leak-check.js
+node_modules/file-uri-to-path/.npmignore
+node_modules/file-uri-to-path/.travis.yml
+node_modules/file-uri-to-path/History.md
+node_modules/file-uri-to-path/index.d.ts
+node_modules/file-uri-to-path/index.js
+node_modules/file-uri-to-path/LICENSE
+node_modules/file-uri-to-path/package.json
+node_modules/file-uri-to-path/README.md
+node_modules/file-uri-to-path/test/test.js
+node_modules/file-uri-to-path/test/tests.json
+node_modules/font/index.js
+node_modules/font/package.json
+node_modules/font/README.md
+node_modules/font/Fonts_JSON/digits_24px.json
+node_modules/font/Fonts_JSON/digits_32px.json
+node_modules/font/Fonts_JSON/font_fixed_8px.json
+node_modules/font/Fonts_JSON/font_fixed_16px.json
+node_modules/font/Fonts_JSON/font_proportional_8px.json
+node_modules/font/Fonts_JSON/font_proportional_16px.json
+node_modules/font/Fonts_JSON/symbols_8px.json
+node_modules/font/Fonts_JSON/symbols_16px.json
+node_modules/lodash.debounce/index.js
+node_modules/lodash.debounce/LICENSE
+node_modules/lodash.debounce/package.json
+node_modules/lodash.debounce/README.md
+node_modules/nan/CHANGELOG.md
+node_modules/nan/include_dirs.js
+node_modules/nan/LICENSE.md
+node_modules/nan/nan_callbacks_12_inl.h
+node_modules/nan/nan_callbacks_pre_12_inl.h
+node_modules/nan/nan_callbacks.h
+node_modules/nan/nan_converters_43_inl.h
+node_modules/nan/nan_converters_pre_43_inl.h
+node_modules/nan/nan_converters.h
+node_modules/nan/nan_define_own_property_helper.h
+node_modules/nan/nan_implementation_12_inl.h
+node_modules/nan/nan_implementation_pre_12_inl.h
+node_modules/nan/nan_json.h
+node_modules/nan/nan_maybe_43_inl.h
+node_modules/nan/nan_maybe_pre_43_inl.h
+node_modules/nan/nan_new.h
+node_modules/nan/nan_object_wrap.h
+node_modules/nan/nan_persistent_12_inl.h
+node_modules/nan/nan_persistent_pre_12_inl.h
+node_modules/nan/nan_private.h
+node_modules/nan/nan_scriptorigin.h
+node_modules/nan/nan_string_bytes.h
+node_modules/nan/nan_typedarray_contents.h
+node_modules/nan/nan_weak.h
+node_modules/nan/nan.h
+node_modules/nan/package.json
+node_modules/nan/README.md
+node_modules/nan/doc/asyncworker.md
+node_modules/nan/doc/buffers.md
+node_modules/nan/doc/callback.md
+node_modules/nan/doc/converters.md
+node_modules/nan/doc/errors.md
+node_modules/nan/doc/json.md
+node_modules/nan/doc/maybe_types.md
+node_modules/nan/doc/methods.md
+node_modules/nan/doc/new.md
+node_modules/nan/doc/node_misc.md
+node_modules/nan/doc/object_wrappers.md
+node_modules/nan/doc/persistent.md
+node_modules/nan/doc/scopes.md
+node_modules/nan/doc/script.md
+node_modules/nan/doc/string_bytes.md
+node_modules/nan/doc/v8_internals.md
+node_modules/nan/doc/v8_misc.md
+node_modules/nan/tools/1to2.js
+node_modules/nan/tools/package.json
+node_modules/nan/tools/README.md
+node_modules/onoff/History.md
+node_modules/onoff/LICENSE
+node_modules/onoff/onoff.d.ts
+node_modules/onoff/onoff.js
+node_modules/onoff/package.json
+node_modules/onoff/README.md
+node_modules/onoff/examples/accessible.js
+node_modules/onoff/examples/blink-led-async.js
+node_modules/onoff/examples/blink-led-promises.js
+node_modules/onoff/examples/blink-led.js
+node_modules/onoff/examples/debounce-button.js
+node_modules/onoff/examples/light-switch.js
+node_modules/onoff/examples/light-switch.png
+node_modules/onoff/examples/mygpio-overlay.dts
+node_modules/onoff/examples/run-examples
+node_modules/onoff/examples/wait-for-interrupt.js
+node_modules/onoff/integration-test/blink-led-promises.js
+node_modules/onoff/integration-test/blink-led.js
+node_modules/onoff/integration-test/change-configuration.js
+node_modules/onoff/integration-test/configure-and-check-active-low-defaults.js
+node_modules/onoff/integration-test/configure-and-check-active-low.js
+node_modules/onoff/integration-test/configure-and-check-input.js
+node_modules/onoff/integration-test/configure-and-check-output.js
+node_modules/onoff/integration-test/debounce.js
+node_modules/onoff/integration-test/dont-reconfigure-direction-part1.js
+node_modules/onoff/integration-test/dont-reconfigure-direction-part2.js
+node_modules/onoff/integration-test/export-many-times.js
+node_modules/onoff/integration-test/high-low.js
+node_modules/onoff/integration-test/many-interrupts.js
+node_modules/onoff/integration-test/output-with-edge-bug.js
+node_modules/onoff/integration-test/performance-async.js
+node_modules/onoff/integration-test/performance-interrupt.js
+node_modules/onoff/integration-test/performance-sync.js
+node_modules/onoff/integration-test/run-performance-tests
+node_modules/onoff/integration-test/run-tests
+node_modules/onoff/integration-test/wait-for-interrupt.js
+node_modules/onoff/integration-test/wait-for-many-interrupts.js
+node_modules/regenerator-runtime/LICENSE
+node_modules/regenerator-runtime/package.json
+node_modules/regenerator-runtime/path.js
+node_modules/regenerator-runtime/README.md
+node_modules/regenerator-runtime/runtime.js
+node_modules/set-interval-async/LICENSE
+node_modules/set-interval-async/package.json
+node_modules/set-interval-async/README.md
+node_modules/set-interval-async/dist/set-interval-async.cjs.js
+node_modules/set-interval-async/dist/set-interval-async.cjs.js.map
+node_modules/set-interval-async/dist/set-interval-async.esm.mjs
+node_modules/set-interval-async/dist/set-interval-async.esm.mjs.map
+node_modules/set-interval-async/dist/set-interval-async.iife.js
+node_modules/set-interval-async/dist/set-interval-async.iife.js.map
+node_modules/set-interval-async/dynamic/index.js
+node_modules/set-interval-async/dynamic/index.js.map
+node_modules/set-interval-async/dynamic/index.mjs
+node_modules/set-interval-async/dynamic/index.mjs.map
+node_modules/set-interval-async/fixed/index.js
+node_modules/set-interval-async/fixed/index.js.map
+node_modules/set-interval-async/fixed/index.mjs
+node_modules/set-interval-async/fixed/index.mjs.map
+node_modules/set-interval-async/legacy/index.js
+node_modules/set-interval-async/legacy/index.js.map
+node_modules/set-interval-async/legacy/index.mjs
+node_modules/set-interval-async/legacy/index.mjs.map
+node_modules/spi-device/binding.gyp
+node_modules/spi-device/History.md
+node_modules/spi-device/LICENSE
+node_modules/spi-device/package.json
+node_modules/spi-device/README.md
+node_modules/spi-device/spi-device.d.ts
+node_modules/spi-device/spi-device.js
+node_modules/spi-device/build/binding.Makefile
+node_modules/spi-device/build/config.gypi
+node_modules/spi-device/build/gyp-mac-tool
+node_modules/spi-device/build/Makefile
+node_modules/spi-device/build/spi.target.mk
+node_modules/spi-device/build/Release/spi.node
+node_modules/spi-device/build/Release/.deps/Release/spi.node.d
+node_modules/spi-device/example/mcp3008-tmp36.js
+node_modules/spi-device/example/pi-mcp3008-tmp36.png
+node_modules/spi-device/src/close.cc
+node_modules/spi-device/src/close.h
+node_modules/spi-device/src/getoptions.cc
+node_modules/spi-device/src/getoptions.h
+node_modules/spi-device/src/open.cc
+node_modules/spi-device/src/open.h
+node_modules/spi-device/src/setoptions.cc
+node_modules/spi-device/src/setoptions.h
+node_modules/spi-device/src/spi.cc
+node_modules/spi-device/src/spidevice.cc
+node_modules/spi-device/src/spidevice.h
+node_modules/spi-device/src/transfer.cc
+node_modules/spi-device/src/transfer.h
+node_modules/spi-device/src/util.h
+node_modules/spi-device/test/default-options.js
+node_modules/spi-device/test/message-size.js
+node_modules/spi-device/test/options-sync.js
+node_modules/spi-device/test/options.js
+node_modules/spi-device/test/run-tests
+node_modules/spi-device/test/transfer.js
+node_modules/spi-device/test/stress/brute-force-leak-check.js
+node_modules/spi-device/test/stress/multiple-instances-single-device.js
+node_modules/spi-device/test/stress/tmp36-sync.js
+node_modules/spi-device/test/stress/tmp36.js
