--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "set-interval-async": "^2.0.3",
     "font": "git+https://github.com/7h0mas-R/Font.git",
+  },
+  "optionalDependencies": {
+    "set-interval-async": "^2.0.3",
+    "font": "git+https://github.com/7h0mas-R/Font.git",
     "onoff": "^6.0.3",
     "spi-device": "^3.1.2"
   },
