--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eadog_lcd",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Supports use of simple serial LCD displays of EA DOG series",
   "main": "index.js",
   "scripts": {
@@ -14,11 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "set-interval-async": "^2.0.3",
-    "font": "git+https://github.com/7h0mas-R/Font.git",
+    "font": "git+https://github.com/7h0mas-R/Font.git"
   },
   "optionalDependencies": {
-    "set-interval-async": "^2.0.3",
-    "font": "git+https://github.com/7h0mas-R/Font.git",
     "onoff": "^6.0.3",
     "spi-device": "^3.1.2"
   },
