--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eadog_lcd",
+  "name": "lcd",
   "version": "1.0.2",
   "description": "Supports use of simple serial LCD displays of EA DOG series",
   "main": "index.js",
